--- a/Phonetic/zh-Hant.lproj/Main.strings
+++ b/Phonetic/zh-Hant.lproj/Main.strings
@@ -82,8 +82,8 @@
 /* Class = "UILabel"; text = "On"; ObjectID = "UQ1-gf-Cd7"; */
 "UQ1-gf-Cd7.text" = "開";
 
-/* Class = "UILabel"; text = "Double Tap or Long Press to Revoke"; ObjectID = "VOa-VH-F2I"; */
-"VOa-VH-F2I.text" = "雙擊或長按撤銷";
+/* Class = "UILabel"; text = "Double Tap or Long Press to Clean"; ObjectID = "VOa-VH-F2I"; */
+"VOa-VH-F2I.text" = "雙擊或長按清除";
 
 /* Class = "UILabel"; text = "Enable Animation"; ObjectID = "bdE-R0-bwA"; */
 "bdE-R0-bwA.text" = "開啟動畫";
@@ -155,6 +155,10 @@
 "zOq-ls-6Q3.text" = "覆蓋已有欄位";
 
 /* Class = "UILabel"; text = "The more polyphonic characters are selected, the more time will be taken."; ObjectID = "fzh-k8-Gk4"; */
-"fzh-k8-Gk4.text" = "多音字選擇的越多，運行花費的時間越多。";
+"fzh-k8-Gk4.text" = "多音字選擇的越多，運行花費的時間越長。";
 
+/* Class = "UILabel"; text = "Social Profiles Keys"; ObjectID = "EKv-sW-d82"; */
+"EKv-sW-d82.text" = "社交資料欄位";
 
+/* Class = "UILabel"; text = "Instant Message Addresses Keys"; ObjectID = "iQO-ha-HZP"; */
+"iQO-ha-HZP.text" = "即時信息欄位";
