--- a/Phonetic/zh-Hans.lproj/Localizable.strings
+++ b/Phonetic/zh-Hans.lproj/Localizable.strings
@@ -63,7 +63,7 @@
 /* Table view footer title */
 "If the device language is not Chinese, the switch will be forced open." = "如果设备的语言不是中文，开关将被强制打开。";
 
-/* alert view controller message */
+/* alert controller message */
 "If you enjoy using Phonetic Contacts, would you mind taking a moment to rate it? It won't take more than one minute. Thanks a lot!" = "如果您喜欢使用 Phonetic Contacts，烦请花点时间给它评分。感谢您的支持！";
 
 /* No comment provided by engineer. */
@@ -108,14 +108,14 @@
 /* alert action - Cancel */
 "No, thanks" = "取消";
 
-/* alert view controller title - rate me */
+/* alert controller title - rate me */
 "Rate ♡ Phonetic" = "给我打分";
 
 /* navigation item title - Settings
    UIAlertAction - title */
 "Settings" = "设置";
 
-/* UIAlertViewController title */
+/* UIAlertController title */
 "Setting" = "设置";
 
 /* No comment provided by engineer. */
@@ -133,13 +133,13 @@
 /* Table view footer title */
 "⚠️ Be Careful. All of those keys including you manually added before will be removed!" = "⚠️ 请注意！包括之前手动添加的字段都将被清除掉。";
 
-/* UIAlertViewController message */
+/* UIAlertController message */
 "Please tap the yellow button to complete settings. This message is only displayed once!" = "请点击黄色按钮来完成设置。本条消息只显示一次！";
 
-/* alert view controller title */
+/* alert controller title */
 "Choose Key for Quick Search" = "选择字段用于快速搜索";
 
-/* alert view controller message */
+/* alert controller message */
 "`Nickname Key` is highly recommended. This message is only displayed once! You can also set it later in settings." = "推荐使用`昵称字段`。本条消息只显示一次！你也可以稍后自行设置。";
 
 /* alert action title */
@@ -157,17 +157,17 @@
 /* */
 "Disable All" = "全部取消";
 
-/* UIAlertViewController title */
+/* UIAlertController title */
 "Clean All Keys" = "清除所有字段";
 
-/* UIAlertViewController title */
+/* UIAlertController title */
 "Clean Keys" = "清除字段";
 
-/* UIAlertViewController message */
+/* UIAlertController message */
 "Are you sure to clean all keys? All of those keys including you manually added before will be removed too! This can not be revoked!!" = "确定清除所有字段？包括之前手动添加的字段都将被清除掉！清除后将无法恢复！！";
 
-/* UIAlertViewController message */
+/* UIAlertController message */
 "Are you sure to clean Social Profiles keys? This can not be revoked!!" = "确定清除所有个人社交资料字段？清除后将无法恢复！！";
 
-/* UIAlertViewController message */
+/* UIAlertController message */
 "Are you sure to clean Instant Message Addresses keys? This can not be revoked!!" = "确定清除所有即时信息字段？清除后将无法恢复！！";
