--- a/Phonetic/zh-Hans.lproj/Localizable.strings
+++ b/Phonetic/zh-Hans.lproj/Localizable.strings
@@ -171,3 +171,9 @@
 
 /* UIAlertController message */
 "Are you sure to clean Instant Message Addresses keys? This can not be revoked!!" = "确定清除所有即时信息字段？清除后将无法恢复！！";
+
+
+// 3D Touch items
+
+"Add Phonetic Keys" = "添加拼音字段";
+"Clean Phonetic Keys" = "清除拼音字段";
