--- a/Phonetic/zh-Hant.lproj/Localizable.strings
+++ b/Phonetic/zh-Hant.lproj/Localizable.strings
@@ -61,7 +61,7 @@
 "Help Manual" = "幫助手冊";
 
 /* Table view footer title */
-"If the device language is not Chinese, the switch will be forced open." = "如果設備的語言不是中文，開關將被強制打開。";
+"Sort contacts under the English system. If the device language is not Chinese, the switch will be forced open." = "用於英文系統下通訊錄排序。如果設備的語言不是中文，開關將被強制打開。";
 
 /* alert controller message */
 "If you enjoy using Phonetic Contacts, would you mind taking a moment to rate it? It won't take more than one minute. Thanks a lot!" = "如果您喜歡使用 Phonetic Contacts，煩請花點時間給它評分。感謝您的支持！";
@@ -131,7 +131,7 @@
 "e.g: Add a phonetic Nickname / %@ key for `叶梓萱` with `YZX`. Then you can enter `YZX` to search the specific name." = "比如：為 “葉梓萱” 添加 “YZ​​X” 的暱稱或%@，直接輸入 “YZX” 就可以快速搜索到聯繫人。";
 
 /* Table view footer title */
-"⚠️ Be Careful. All of those keys including you manually added before will be removed!" = "⚠️ 請注意！包括之前手動添加的欄位都將被清除掉。";
+"⚠️ Be Careful. All of those keys including you manually added before will be removed!「Select keys you want to delete and go back to Main Interface, Long Press to clean」" = "⚠️ 請注意！包括之前手動添加的字段都將被清除掉。「選擇需要刪除的欄位，回到主界面，長按執行按鈕來清除」";
 
 /* UIAlertController message */
 "Please tap the yellow button to complete settings. This message is only displayed once!" = "請點擊黃色按鈕來完成設置。本條消息只顯示一次！";
