--- a/Phonetic/zh-Hant.lproj/Main.strings
+++ b/Phonetic/zh-Hant.lproj/Main.strings
@@ -50,7 +50,7 @@
 "FYS-C4-a9Y.text" = "中間名欄位";
 
 /* Class = "UITableViewSection"; footerTitle = "If the device language is not Chinese, the switch will be forced open."; ObjectID = "KMY-XD-2W9"; */
-"KMY-XD-2W9.footerTitle" = "如果設備的語言不是中文，開關將被強制打開。";
+"KMY-XD-2W9.footerTitle" = "用於英文系統下通訊錄排序。如果設備的語言不是中文，開關將被強制打開。";
 
 /* Class = "UITableViewSection"; headerTitle = "Phonetic Contacts"; ObjectID = "KMY-XD-2W9"; */
 "KMY-XD-2W9.headerTitle" = "Phonetic Contacts";
